# slack-twitter

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
slack_twitter/: main.py
tests/: test_slack_twitter.py
